[package]
name = "yaml-gear"
version = "0.1.0-alpha.2"
edition = "2021"
license = "MIT"
description = "A fast YAML parser and stringifier built with Rust and WebAssembly"
repository = "https://github.com/scolor-dev/yaml-gear"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.95"
wasm-bindgen = "0.2.118"

[dev-dependencies]
wasm-bindgen-test = "0.3.68"

[profile.release]
opt-level = "z"
lto = true